crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/local_rules_with_the_same_name_remain_distinct.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect plugins
```

## `biome.json`

```json
{
  "plugins": [
    "./first/shared.grit",
    "./second/shared.grit",
    "./first/shared.grit"
  ]
}
```

## `first/shared.grit`

```grit
`unterminated
```

## `second/shared.grit`

```grit
`unterminated
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The configuration enables 2 plugin rules.
  
  Local plugins
  
  - first/shared.grit (rule name: shared)
  - second/shared.grit (rule name: shared)
  
  i 2 plugin rules are named shared. A suppression comment for lint/plugin/shared applies to all of them.
  

```
