crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/no_configuration.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i No plugin rules resolved.
  

```
